# scsharp

./: README
SCSharp/: Makefile.am
SCSharp/SCSharp.UI/: Game.cs  GameScreen.cs  MapRenderer.cs  MovieElement.cs  Painter.cs  Sprite.cs  UIElement.cs  Unit.cs
Tests/: Makefile.am
sdldotnet-bin/: Tao.Sdl.dll.config
src/: Makefile.am  scsharp.cs
tools/: Makefile.am
